<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.AddCostActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <!--<EditText-->
            <!--android:id="@+id/commodityName"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignEnd="@+id/imageView"-->
            <!--android:layout_alignStart="@+id/imageView"-->
            <!--android:hint="@string/CommodityName" />-->
        <AutoCompleteTextView
            android:id="@+id/commodityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:hint="@string/CommodityName" />

        <EditText
            android:id="@+id/commodityPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:hint="@string/CommodityPrice"
            android:inputType="numberDecimal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move"
            android:id="@+id/move_button" />

    </LinearLayout>

    <Button
        android:id="@+id/button_food"
        android:layout_width="300px"
        android:layout_height="100px"
        android:background="#ff9966"
        android:text="@string/category_food"
        android:layout_alignTop="@+id/button_transport"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_accommodation"
        android:layout_width="300px"
        android:layout_height="100px"
        android:background="#ee8b84"
        android:text="@string/category_accommodation"
        android:layout_above="@+id/button_other"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button_transport"
        android:layout_width="300px"
        android:layout_height="100px"
        android:background="#6699FF"
        android:text="@string/category_transport"
        android:layout_above="@+id/button_accommodation"
        android:layout_alignStart="@+id/button_accommodation" />

    <Button
        android:id="@+id/button_travel"
        android:layout_width="300px"
        android:layout_height="100px"
        android:background="#114433"
        android:text="@string/category_travel"
        android:layout_alignTop="@+id/button_other"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_dinner"
        android:layout_width="300px"
        android:layout_height="100px"
        android:background="#552233"
        android:text="@string/category_dinner"
        android:layout_above="@+id/button_other"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_other"
        android:layout_width="300px"
        android:layout_height="100px"
        android:background="#666633"
        android:text="@string/category_other"
        android:layout_marginBottom="33dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
